# wkteam-api-sdk

./: .gitignore  AGENTS.md  LICENSE  README.md
docs/: testing-strategy.md  worklog.md
docs/specs/: PRD.md  PRD_VALIDATION_REPORT.md
docs/specs/engineering-spec/: SPEC_INDEX.md
docs/specs/engineering-spec/00_Overview/: API_COVERAGE_REVIEW.md  API_DOC_COVERAGE.generated.md  DECISION_LOG.md  REPO_LAYOUT.md  REQUIREMENTS_MATRIX.md  SUMMARY.md  TECH_STACK.md
docs/task-summaries/: 2026-02-10_engineering-spec-relocation.md  2026-02-10_repo-hygiene-cleanup.md  2026-02-10_repo-layout-refactor.md  2026-02-10_wkteam-api-sdk_mvp-to-full-sdk.md  2026-02-10_wkteam-api-sdk_python-sdk.md
docs/templates/: task-summary-template.md
src/python-sdk/: README.md  pyproject.toml
src/python-sdk/tests/: test_api_coverage_gate.py  test_api_tree_smoke.py  test_callbacks_and_polling.py
src/python-sdk/tools/: generate_sdk.py
src/python-sdk/wkteam_api_sdk/: __init__.py  callbacks.py  client.py  config.py  core_client.py  errors.py  generated_api.py  hooks.py  manifest.py  operation_index.py  polling.py  redaction.py
src/typescript-sdk/: .env.example  README.md  biome.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
src/typescript-sdk/src/: index.ts
src/typescript-sdk/src/sdk/: client.ts  config.ts  (+4 more)
src/typescript-sdk/test/: api-coverage.test.ts  auth-header.test.ts  call-errors.test.ts  client.test.ts  concurrency.test.ts  get-query.test.ts  retry.test.ts
src/typescript-sdk/tools/: README.md  generate_api_artifacts.mjs  generate_sdk.mjs
(+22 files in other folders)
