[build-system]
requires = [
  "setuptools==69.5.1",
  "wheel==0.43.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "wkteam-api-sdk"
version = "0.1.0"
description = "wkteam api-wen-dang2 Python SDK (offline-doc driven)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "wkteam-api-sdk contributors" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "pytest-asyncio==0.23.8",
  "ruff==0.4.10",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["wkteam_api_sdk*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E", "F", "I", "W",
  "B",
  "UP",
]
ignore = [
  "E501", # 由 formatter 控制
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
